# PY_Web_13

./: README.md
part1/: main.py  pyproject.toml  test.db
part1/postgres-data/: postmaster.pid
part1/postgres-data/base/1/: pg_internal.init
part1/postgres-data/base/16384/: 16401  16402  16408  16410  pg_internal.init
part1/postgres-data/base/5/: pg_internal.init
part1/postgres-data/global/: pg_control  pg_internal.init
part1/src/entity/: models.py
part1/src/repository/: todos.py  users.py
part1/src/routes/: auth.py  routes.py  users.py
part1/src/schemas/: todo.py  user.py
part2/: pyproject.toml
part2/hw_project/: db.sqlite3
part2/hw_project/hw_project/: settings.py  urls.py
part2/hw_project/quotes/: models.py  urls.py  utils.py  views.py
part2/hw_project/quotes/migrations/: 0001_initial.py  0002_alter_quote_author.py  0003_author_created_by_author_is_active.py
part2/hw_project/quotes/static/quotes/: style.css
part2/hw_project/quotes/templates/quotes/: about.html  add_author.html  add_quote.html  base.html  index.html  tag.html
part2/hw_project/quotes/templatetags/: extract.py
part2/hw_project/users/: forms.py  models.py  urls.py  views.py
part2/hw_project/users/templates/users/: register.html
part2/hw_project/utils/: add_quotes_to_mongo.py  migration.py
