[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["Dmytro-Ostrenko <142011911+Dmytro-Ostrenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2 = "^2.9.9"
scrapy = "^2.11.1"
pymongo = "^4.6.2"
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.1"
sqlalchemy = "2.0.29"
alembic = "1.13.1"
aiopg = "^1.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.9"
bcrypt = "4.0.1"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
cloudinary = "^1.39.1"
python-dotenv = "^1.0.1"
fastapi-limiter = "^0.1.6"
redis = "^5.0.3"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
